force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_SignedLegalDocumentReturned__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SignedLegalDocumentReturned__c</fullName>
    <label>Legal Milestones Complete</label>
    <type>Date</type>
</CustomField>