force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_SignedRIRProvided__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SignedRIRProvided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed RIR Provided</label>
    <type>Checkbox</type>
</CustomField>