force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_StandardTermNotAgreed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StandardTermNotAgreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Terms Not Agreed</label>
    <type>Checkbox</type>
</CustomField>