force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Negotiation</fullName>
            </value>
            <value>
                <fullName>Awaiting Design</fullName>
            </value>
            <value>
                <fullName>Land Right Issued</fullName>
            </value>
            <value>
                <fullName>Land Right Acquired</fullName>
            </value>
            <value>
                <fullName>Land Right Secured</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Internal Legal Instruction</fullName>
            </value>
            <value>
                <fullName>Draft Documents Issued</fullName>
            </value>
            <value>
                <fullName>Third Party Consent</fullName>
            </value>
            <value>
                <fullName>Draft Documents Agreed</fullName>
            </value>
            <value>
                <fullName>Legal Milestones Completed</fullName>
            </value>
            <value>
                <fullName>Consent Acquired</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>