force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_SubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SubmissionDate__c</fullName>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>