force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ThirdPartyConsent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ThirdPartyConsent__c</fullName>
    <label>Third Party Consent</label>
    <type>Date</type>
</CustomField>