force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_TitleConsentRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TitleConsentRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Consent Required</label>
    <type>Checkbox</type>
</CustomField>