force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Unique_Id__c</fullName>
    <displayFormat>LR-{00000}</displayFormat>
    <label>Unique Id</label>
    <type>AutoNumber</type>
</CustomField>