force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Valid_Consent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Valid_Consent__c</fullName>
    <label>Valid Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>