force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_WayleaveStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WayleaveStatus__c</fullName>
    <label>Wayleave Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Design</fullName>
                <color>#FF6A3B</color>
                <label>Awaiting Design</label>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
                <color>#86B8D6</color>
                <label>In Negotiation</label>
            </value>
            <value>
                <fullName>Consent Issued</fullName>
                <color>#4A7CBE</color>
                <label>Consent Issued</label>
            </value>
            <value>
                <fullName>Consent Acquired</fullName>
                <color>#A5DD50</color>
                <label>Consent Acquired</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#5C881A</color>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>