force-app/main/default/objects/SPEN_Land_Interest__c/recordTypes/SPEN_Existing.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Existing</fullName>
    <active>true</active>
    <label>Existing/Refurb</label>
</RecordType>