force-app/main/default/objects/SPEN_Land_Interest__c/recordTypes/SPEN_Servitude.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Servitude</fullName>
    <active>true</active>
    <label>Permanent Land Right</label>
</RecordType>