force-app/main/default/objects/SPEN_Land_Interest__c/recordTypes/SPEN_Statutory.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Statutory</fullName>
    <active>true</active>
    <label>Statutory Land Right</label>
</RecordType>