force-app/main/default/objects/SPEN_Land_Interest__c/recordTypes/SPEN_Wayleave.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Wayleave</fullName>
    <active>true</active>
    <label>Wayleave</label>
</RecordType>