force-app/main/default/objects/SPEN_Land_Interest__c/validationRules/SPEN_ConsentTypeUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_ConsentTypeUpdate</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(SPEN_ConsentType__c ) &amp;&amp; NOT (ISCHANGED( RecordTypeId ) )</errorConditionFormula>
    <errorMessage>If you need to change the Consent Type within the same category, please close the current Land Right and create a new Land Right with the correct Consent Type.</errorMessage>
</ValidationRule>