force-app/main/default/objects/SPEN_Land_Interest__c/validationRules/SPEN_HeadsOfTermsAgreedDateBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_HeadsOfTermsAgreedDateBlank</fullName>
    <active>true</active>
    <description>ESC-841</description>
    <errorConditionFormula>AND(NOT( ISNULL( SPEN_SignedLegalDocumentReturned__c ) ),ISNULL( SPEN_HeadofTermAgreedDate__c ))</errorConditionFormula>
    <errorMessage>Heads of Terms Agreed Date must be completed before this information can be completed.</errorMessage>
</ValidationRule>