force-app/main/default/objects/SPEN_Land_Interest__c/validationRules/SPEN_HeadsOfTermsAgreedDateIsNull.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_HeadsOfTermsAgreedDateIsNull</fullName>
    <active>true</active>
    <description>ESC-841</description>
    <errorConditionFormula>AND(NOT( ISNULL(SPEN_InternalLegalInstructionDate__c ) ),ISNULL( SPEN_HeadofTermAgreedDate__c ))</errorConditionFormula>
    <errorDisplayField>SPEN_InternalLegalInstructionDate__c</errorDisplayField>
    <errorMessage>Heads of Terms Agreed Date must be completed before this information can be completed.</errorMessage>
</ValidationRule>