force-app/main/default/objects/SPEN_Land_Interest__c/validationRules/SPEN_InternalLegalInstructionDaIsNull.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_InternalLegalInstructionDaIsNull</fullName>
    <active>true</active>
    <description>ESC-841</description>
    <errorConditionFormula>AND(NOT( ISNULL( SPEN_SignedLegalDocumentReturned__c ) ),ISNULL(  SPEN_InternalLegalInstructionDate__c ))</errorConditionFormula>
    <errorMessage>Internal Legal Instruction Date must be completed before this information can be completed</errorMessage>
</ValidationRule>