force-app/main/default/objects/SPEN_Land_Interest__c/validationRules/SPEN_InternalLegalInstructionDateRange.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_InternalLegalInstructionDateRange</fullName>
    <active>true</active>
    <description>ESC-841</description>
    <errorConditionFormula>AND(NOT( ISNULL(SPEN_InternalLegalInstructionDate__c ) ),NOT(ISNULL( SPEN_HeadofTermAgreedDate__c )),SPEN_InternalLegalInstructionDate__c  &lt; SPEN_HeadofTermAgreedDate__c )</errorConditionFormula>
    <errorDisplayField>SPEN_InternalLegalInstructionDate__c</errorDisplayField>
    <errorMessage>The date entered must be equal to or greater than the date HoTs were agreed</errorMessage>
</ValidationRule>