force-app/main/default/objects/SPEN_Land_Interest__c/validationRules/SPEN_WayleaveConsentAcquiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_WayleaveConsentAcquiredFields</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(SPEN_WayleaveStatus__c,&apos;Consent Acquired&apos;) &amp;&amp;  SPEN_RIRRequired__c == true &amp;&amp; ( ISBLANK( SPEN_RIRReceived__c) ||  SPEN_SignedRIRProvided__c == false ) &amp;&amp;  RecordType.DeveloperName == &quot;SPEN_Wayleave&quot;</errorConditionFormula>
    <errorMessage>Wayleave Status cannot be marked as Consent Acquired until RiR Received field has dates and Signed RiR Provided is checked.</errorMessage>
</ValidationRule>