force-app/main/default/objects/SPEN_Land_Interest__c/validationRules/SPEN_WayleaveLIClosure.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_WayleaveLIClosure</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( SPEN_ReasonforLIClosure__c, &apos;&apos;), OR(ISPICKVAL(SPEN_WayleaveStatus__c, &apos;Closed&apos;),
ISPICKVAL( SPEN_ServitudeStatus__c , &apos;Closed&apos;),
ISPICKVAL( SPEN_Existing_Refurb_Status__c , &apos;Closed&apos;),
ISPICKVAL(SPEN_CompulsoryStatus__c , &apos;Closed&apos;)


))</errorConditionFormula>
    <errorDisplayField>SPEN_ReasonforLIClosure__c</errorDisplayField>
    <errorMessage>Please enter a reason for closure</errorMessage>
</ValidationRule>