force-app/main/default/objects/SPEN_Land_Interest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>SPEN_LIStatus__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_WayleaveStatus__c</columns>
    <columns>SPEN_Job__c</columns>
    <columns>SPEN_SAPContract__c</columns>
    <columns>SPEN_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_Land_Interest__c.SPEN_Wayleave</value>
    </filters>
    <label>All</label>
</ListView>