force-app/main/default/objects/SPEN_Land_Interest__c/listViews/SPEN_ParmanentLandRights.listView-meta.xml
<ListView>
    <fullName>SPEN_ParmanentLandRights</fullName>
    <columns>NAME</columns>
    <columns>SPEN_LandTitle__c</columns>
    <columns>SPEN_ConsentType__c</columns>
    <columns>SPEN_LIStatus__c</columns>
    <columns>SPEN_HeadofTermAgreedDate__c</columns>
    <columns>SPEN_InternalLegalInstructionDate__c</columns>
    <columns>SPEN_InternalLegalInstructExternalTeam__c</columns>
    <columns>SPEN_DraftdocumentsIssuedDate__c</columns>
    <columns>SPEN_DraftDocumentAgreedDate__c</columns>
    <columns>SPEN_SignedLegalDocumentReturned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_Land_Interest__c.SPEN_Servitude</value>
    </filters>
    <label>Permanent Land Rights</label>
    <sharedTo>
        <roleAndSubordinates>Land_and_Planning</roleAndSubordinates>
    </sharedTo>
</ListView>