force-app/main/default/objects/SPEN_Land_Interest__c/listViews/SPEN_WayleaveLandRights.listView-meta.xml
<ListView>
    <fullName>SPEN_WayleaveLandRights</fullName>
    <columns>NAME</columns>
    <columns>SPEN_LandTitle__c</columns>
    <columns>SPEN_ConsentType__c</columns>
    <columns>SPEN_LIStatus__c</columns>
    <columns>SPEN_Land_Right_Issued__c</columns>
    <columns>SPEN_Land_Right_Acquired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_Land_Interest__c.SPEN_Wayleave</value>
    </filters>
    <label>Wayleave Land Rights</label>
    <sharedTo>
        <roleAndSubordinates>Land_and_Planning</roleAndSubordinates>
    </sharedTo>
</ListView>